# git_test

./: .pre-commit-config.yaml  1.txt  pyproject.toml  releaseVersion.txt
.github/workflows/: main.yml
crud_app/: main.py  run.py
fastapi-crud/: main.py
fastapi-crud/blog/: models.py
fastapi_crud/: main.py  run.py
fastapi_crud/models/: model.py
fastapi_crud/schemas/: schema.py
fastapi_crud/utility/: database.py
tests/: test_poetry_demo.py
