[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["Ravi Kumar <ravikumarsinghsolanki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
pytest = "^7.4.4"
httpx = "^0.26.0"
black = "^23.12.1"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "fastapi_crud.run:start"
